# grin

./: .gitignore  Dockerfile  Dockerfile.alpine  Dockerfile.slim  README.md  capnum.txt  capnum.w2k  capnum.w2k.grn  desktop.py  docker_run.sh  grin.py  grin.xbm  grin_setup.py  index.html  pyproject.toml  requirements.txt  web.py  winbxm.txt  winbxm.w2k  winbxm.w2k.grn  winbxm3126.w2k  winbxm3126.w2k.grn
.github/workflows/: publish.yml
grin/: __init__.py  grin.py
icelib/: gui.py  gui_setup.py
tests/: test_grin.py
