[tool.poetry]
name = "grin"
version = "2.0.0"
description = "GReen INput allows you to type Chinese characters without needing to install a system-wide input method (IME)."
authors = ["Ray Luo <rayluo.mba@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.5"

# https://python-poetry.org/docs/pyproject/#extras
# Optional dependencies, some of which are included in the below `extras`.

# We used Input element's SetFocus() method, which was available since 3.14
pysimplegui = { version = ">=3.14,<5", optional = true }

[tool.poetry.extras]
desktop = ["pysimplegui"]


[tool.poetry.dev-dependencies]
brython = "^3.9.1"
#pytest = "^4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
